Doc/tutorial/datastructures.rst
@@ -254,7 +254,7 @@ A more verbose version of this snippet shows the flow explicitly::
             print(row[i], end="")
         print()
 
-In real world, you should prefer builtin functions to complex flow statements.
+In real world, you should prefer built-in functions to complex flow statements.
 The :func:`zip` function would do a great job for this use case::
 
     >>> list(zip(*mat))
