Lib/wsgiref/headers.py
@@ -6,7 +6,7 @@ written by Barry Warsaw.
 """
 
 # Regular expression that matches `special' characters in parameters, the
-# existance of which force quoting of the parameter value.
+# existence of which force quoting of the parameter value.
 import re
 tspecials = re.compile(r'[ \(\)<>@,;:\\"/\[\]\?=]')
 
